--- a/apps/www/_blog/2024-01-05-beta-update-december-2023.mdx
+++ b/apps/www/_blog/2024-01-05-beta-update-december-2023.mdx
@@ -97,7 +97,6 @@ As if all that wasn't enough, we shipped even more cool stuff:
 - Your Complete Guide To Next.js Authentication With Supabase. [[Video](https://www.youtube.com/watch?v=dhXjHGklaZc)]
 - Supabase Launch Week X with Jon Meyers. [[Podcast](https://podrocket.logrocket.com/supabase-launch-week-x-jon-meyers)]
 - Integrating Comments in a Next.js Blog with Supabase and Slack. [[Article](https://prismic.io/blog/nextjs-supabase-tutorial)]
-- Connect your Streamlit apps to Supabase. [Tutorial](https://blog.streamlit.io/connect-your-streamlit-apps-to-supabase/)
 - Exploring Supabase Realtime By Building a Game. [[Tutorial](https://www.aleksandra.codes/supabase-game)]
 - The Commit Podcast, Ep 3 - Supabase, Postgres, AI, and Launch Weeks with Paul Copplestone. [[Podcast](https://www.youtube.com/watch?v=hLaKO1MIhNI)]
 - Logging with Python and Supabase: A Practical Guide. [[Article](https://medium.com/@goncalo.baiao/logging-with-python-and-supabase-a-practical-guide-6b541c453073)]
@@ -108,7 +107,7 @@ As if all that wasn't enough, we shipped even more cool stuff:
 
 Come join one of the fastest-growing open source projects ever 🤗
 
-- [Customer Solution Architect](https://www.notion.so/ab824340b4e3480d9fdc2a457b702769?pvs=21)
+- [Customer Solution Architect](https://boards.greenhouse.io/supabase/jobs/5027144004)
 - [Platform Engineer (Postgres team)](https://boards.greenhouse.io/supabase/jobs/5011466004)
 - [Support Engineers across all timezones](https://supabase.com/careers#positions)
 
