--- a/apps/docs/pages/guides/getting-started/quickstarts/flutter.mdx
+++ b/apps/docs/pages/guides/getting-started/quickstarts/flutter.mdx
@@ -79,10 +79,7 @@ export const meta = {
 
     <StepHikeCompact.Details title="Initialize the Supabase client">
 
-      Open `lib/main.dart` and edit the main function to initialize Supabase using your project URL and public API (anon) key:
-
-      <ProjectConfigVariables variable="url" />
-      <ProjectConfigVariables variable="anonKey" />
+      Open `lib/main.dart` and edit the main function to initialize Supabase using your [project URL and public API (anon) key](https://supabase.com/dashboard/project/_/settings/api).
 
     </StepHikeCompact.Details>
 
