--- a/apps/docs/pages/guides/getting-started/quickstarts/kotlin.mdx
+++ b/apps/docs/pages/guides/getting-started/quickstarts/kotlin.mdx
@@ -100,11 +100,7 @@ export const meta = {
 
       For the sake of simplicity, we will create a client in the `MainActivity.kt` file at the top just below the imports.
 
-      Replace the `supabaseUrl` and `supabaseKey` with your own:
-
-      <ProjectConfigVariables variable="url" />
-      <ProjectConfigVariables variable="anonKey" />
-
+      Replace the `supabaseUrl` and `supabaseKey` with your own found in [your dashboard](https://supabase.com/dashboard/project/_/settings/api).
     </StepHikeCompact.Details>
 
     <StepHikeCompact.Code>
