add link to prisma integration in db connecting (#20524)
* add link to prisma integration in db connecting

* fix copy

--- a/apps/docs/pages/guides/database/connecting-to-postgres.mdx
+++ b/apps/docs/pages/guides/database/connecting-to-postgres.mdx
@@ -234,6 +234,10 @@ Assuming you've downloaded your SSL certificate to `$HOME/Downloads/prod-supabas
 psql "sslmode=verify-full sslrootcert=$HOME/Downloads/prod-supabase.cer host=db.ref.supabase.co dbname=postgres user=postgres"
 ```
 
+### Connecting with Prisma
+
+Refer to our [Prisma integration guide](https://supabase.com/partners/integrations/prisma) for more details.
+
 ### Connecting with Postgres.js
 
 [Postgres.js](https://github.com/porsager/postgres) is a full-featured PostgreSQL client for Node.js and Deno.
