chore: fix desc pggraphql (#20718)

--- a/apps/www/_blog/2024-01-24-how-pg-graphql-works.mdx
+++ b/apps/www/_blog/2024-01-24-how-pg-graphql-works.mdx
@@ -1,6 +1,6 @@
 ---
 title: How pg_graphql works
-description: 'Learn how to create a new Laravel PHP app and connect it to a Supabase PostgreSQL database.'
+description: 'An insight into the internals of GraphQL in Postgres using pg_graphql, and how you can contribute.'
 author: raminder_singh
 image: how-pg-graphql-works/og.png
 thumb: how-pg-graphql-works/thumb.png
