[Docs] Fix createClient function to resolve type errors (#20799)
Co-authored-by: Charis <26616127+charislam@users.noreply.github.com>

--- a/apps/docs/pages/guides/auth/server-side/nextjs.mdx
+++ b/apps/docs/pages/guides/auth/server-side/nextjs.mdx
@@ -155,10 +155,10 @@ export function createClient(cookieStore: ReturnType<typeof cookies>) {
           return cookieStore.get(name)?.value
         },
         set(name: string, value: string, options: CookieOptions) {
-          return cookieStore.set({ name, value, ...options })
+          cookieStore.set({ name, value, ...options })
         },
         remove(name: string, options: CookieOptions) {
-          return cookieStore.set({ name, value: '', ...options })
+          cookieStore.set({ name, value: '', ...options })
         },
       },
     }
