Clearer Branching Docs lang regarding private early access (#20721)
clearer Branching Docs lang

--- a/apps/docs/pages/guides/platform/branching.mdx
+++ b/apps/docs/pages/guides/platform/branching.mdx
@@ -9,9 +9,11 @@ export const meta = {
 
 Use branching to safely and easily experiment with changes to your Supabase projects.
 
-<Admonition type="caution" label="Branching available for Early Access, available on the Pro Plan and above.">
+<Admonition type="caution" label="Branching only available for Private Early Access.">
 
 We do not recommended Branching in a production environment while it is in Early Access.
+
+Branching will move to Public Beta in future, but only available for Pro plan and above.
 
 </Admonition>
 
