--- a/apps/docs/content/guides/storage/serving/downloads.mdx
+++ b/apps/docs/content/guides/storage/serving/downloads.mdx
@@ -1,13 +1,11 @@
-import Layout from '~/layouts/DefaultGuideLayout'
-
-export const meta = {
-  id: 'storage-image-transformations',
-  title: 'Serving assets from Storage',
-  description: 'Serving assets from Storage',
-  subtitle: 'Serving assets from Storage',
-  sidebar_label: 'Serving assets',
-  tocVideo: 'dLqSmxX3r7I',
-}
+---
+id: 'storage-image-transformations'
+title: 'Serving assets from Storage'
+description: 'Serving assets from Storage'
+subtitle: 'Serving assets from Storage'
+sidebar_label: 'Serving assets'
+tocVideo: 'dLqSmxX3r7I'
+---
 
 ## Public buckets
 
@@ -53,7 +51,3 @@ if (data) {
   console.log(data.signedUrl)
 }
 ```
-
-export const Page = ({ children }) => <Layout meta={meta} children={children} />
-
-export default Page
