--- a/apps/docs/content/guides/functions/routing.mdx
+++ b/apps/docs/content/guides/functions/routing.mdx
@@ -55,7 +55,7 @@ However, within Edge Functions, paths should always be prefixed with the functio
 You can deploy the function to Supabase via:
 
 ```bash
-supabase deploy hello-world
+supabase functions deploy hello-world
 ```
 
 Once the function is deployed, you can try to call the two ednpoints using cURL (or Postman).
